# sector-7g

./: .copier-answers.yml  .env.deploy.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_auth.py  002_springfield_characters.py
app/: __init__.py
app/cli/: __init__.py  auth.py  docs.py  load_test.py  main.py  tasks.py
app/components/backend/: hooks.py  main.py
app/components/backend/api/: deps.py  events.py  health.py  models.py  routing.py  scheduler.py  task_history.py  worker.py
app/components/backend/api/auth/: router.py
app/components/backend/middleware/: docs_auth.py
app/components/backend/startup/: component_health.py  database_init.py
app/components/frontend/: main.py  styles.py  theme.py
app/components/frontend/controls/: __init__.py  buttons.py  data_table.py  expandable_data_table.py  form_fields.py  severity_filter.py  table.py  tag.py  tech_badge.py  text.py
app/components/frontend/dashboard/: activity_feed.py  status_overview.py
app/components/frontend/dashboard/cards/: __init__.py  auth_card.py  base_card.py  card_factory.py  card_utils.py  database_card.py  ingress_card.py  redis_card.py  scheduler_card.py  server_card.py  services_card.py  worker_card.py
app/components/frontend/dashboard/diagram/: __init__.py  diagram_canvas.py  diagram_node.py  diagram_view.py  layout.py
app/components/frontend/dashboard/modals/: __init__.py  (+15 more)
app/components/scheduler/: main.py
app/components/worker/: CLAUDE.md  constants.py  events.py  middleware_taskiq.py  pools.py  registry.py  task_history.py
app/components/worker/queues/: carl.py  charlie.py  grimey.py  homer.py  inanimate_rod.py  lenny.py
app/components/worker/tasks/: __init__.py  carl_tasks.py  charlie_tasks.py  grimey_tasks.py  homer_tasks.py  inanimate_rod_tasks.py  lenny_tasks.py  simple_system_tasks.py  simulation_tasks.py
app/core/: config.py  db.py  log.py  security.py
app/entrypoints/: scheduler.py  webserver.py
app/integrations/: main.py
app/services/auth/: health.py  user_service.py
app/services/backend/: middleware_inspector.py  models.py  route_inspector.py
app/services/scheduler/: __init__.py  models.py  scheduled_task_manager.py  task_monitor.py
app/services/springfield/: __init__.py  burns.py  carl.py  charlie.py  grimey.py  homer.py  inanimate_rod.py  lenny.py  plant.py  scheduler_jobs.py  simulation.py
app/services/system/: backup.py  env_config.py  health.py  health_db.py  health_db_postgres.py  health_db_sqlite.py  models.py  ui.py
docs/: api.md  development.md  health.md
docs/components/: scheduler.md
scripts/: entrypoint.sh  server-setup.sh
tests/: conftest.py  test_core.py
tests/api/: test_auth_endpoints.py  test_health_endpoints.py  test_scheduler_endpoints.py  test_worker_endpoints.py
tests/cli/: test_docs.py
tests/components/: test_scheduler.py  test_worker_events.py
tests/services/: test_auth_integration.py  test_component_integration.py  test_health_logic.py  test_middleware_inspector.py  test_scheduled_task_manager.py  test_system_service.py  test_worker_health_registration.py
traefik/: traefik.dev.yml  traefik.yml
