[project]
name = "sector-7g"
version = "0.1.0"
description = "A production-ready async Python application built with Aegis Stack"
readme = "README.md"
requires-python = ">=3.14,<3.15"

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi==0.116.1",
    "flet[all]==0.28.3",
    "uvicorn==0.35.0",
    "structlog==25.4.0",
    "pydantic-settings>=2.12.0",
    "typer==0.16.0",
    # Pin click to avoid yanked versions (typer dependency)
    "click==8.2.1",
    # Rich CLI formatting
    "rich==14.1.0",
    # Interactive prompts with status line support
    "prompt_toolkit>=3.0.0",
    # HTTP client for CLI API calls
    "httpx==0.28.1",
    # Security fix for GHSA-38jv-5279-wg99
    "urllib3>=2.6.3",
    # System monitoring
    "psutil==7.0.0",
    "apscheduler==3.10.4",
    "redis==5.0.8",
    "arq==0.25.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=1.1.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart==0.0.9",
    "alembic==1.16.5",
    "email-validator==2.2.0",  # Required for EmailStr in auth/comms models
]

[project.scripts]
sector-7g = "app.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "ruff==0.12.7",
    "ty",
    "types-psutil==7.0.0.20250801",
    "pre-commit==4.2.0",
    "pip-audit==2.9.0",
    # Development auto-reload for workers
    "watchdog==4.0.2",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocstrings[python]==0.30.0",
    "mkdocs-gen-files==0.5.0",
    "pymdown-extensions==10.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]  # Added UP for pyupgrade (modern Python syntax)
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["app"]

[tool.ty.rules]
# Configure ty to ignore only genuine false positives or unavoidable issues
# Real type issues should be fixed, not ignored
unresolved-import = "ignore"              # Missing third-party type stubs (unavoidable)
unresolved-attribute = "ignore"           # Some dynamic attribute access in Flet is unavoidable
invalid-argument-type = "ignore"          # Flet dynamic attributes and colors
non-subscriptable = "ignore"             # Flet page.controls access patterns
unsupported-operator = "ignore"          # Flet value comparisons with None
possibly-missing-attribute = "ignore"    # Flet dynamic component properties
call-non-callable = "ignore"             # Dynamic middleware registration patterns
invalid-return-type = "ignore"           # Flet component return type flexibility


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]